hugo/Kube/gateways/old/tech-gateway-vs.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: hugo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-hugo
  namespace: hugo
spec:
  hosts:
  - "*"
  gateways:
    route:
    - destination:
        host: nginx-svc-hugo.hugo.svc.cluster.local
        port:
          number: 80
